--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (prefers-color-scheme: light) {
+  body {
+    background: #FFF;
+    color: #333;
+  }
+  a, input {
+    color: #333;
   }
 }
-
-.App-header {
-  background-color: #282c34;
+@media (prefers-color-scheme: dark) {
+  body {
+    background: #333;
+    color: #FFF;
+  }
+  a, input {
+    color: #FFF;
+  }
+  .card {
+    background-color: rgba(0,0,0,0.2);
+    color: antiquewhite;
+  }
+}
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  min-height: 100vh;
+  margin: 0 auto;
+}
+#root {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+}
+#root main {
+  margin-top: 20px;
+  margin-bottom: auto;
+  padding-bottom: 20px;
+}
+a.brand-logo {
+  display: flex;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+a.active {
+  pointer-events: none;
+  cursor: text;
+  opacity: 0.5;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.catalog {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+  gap: 15px;
+}
+.card img {
+  max-height: 100%;
+}
+.catalog .card {
+  margin: 0;
+}
+.catalog .card a {
+  color: #00bfa5;
+}
+.catalog .card .card-image {
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+.category .card.horizontal .card-image img {
+  border-radius: 50%;
+  padding: 10px;
+}
+.category .card {
+  max-height: 184px;
+}
+.category .card p {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+.category .card .card-image {
+  display: flex;
+  align-items: center;
+  height: 184px;
+  overflow: hidden;
+}
+.product .image img {
+  position: sticky;
+  top: 20px;
+}
+.product h1 {
+  margin-top: 0;
+}
+iframe {
+  width: 100%;
+  border: none;
+  margin: 20px auto;
+}
+.back .btn {
+  margin-bottom: 20px;
+}
+.input-field {
+  display: flex;
+  align-items: baseline;
+  gap: 10px;
+}
+.card.horizontal .card-action {
+  text-align: right;
+}
+.card-action .btn {
+  font-size: 14px;
+  font-weight: normal;
+}
+@media screen and (min-width: 768px) {
+  iframe {
+    height: 480px;
   }
-  to {
-    transform: rotate(360deg);
+
+}
+@media screen and (min-width: 992px) {
+  iframe {
+    height: 605px;
+  }
+  .info {
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+  }
+  .desc {
+    position: sticky;
+    top: 20px;
   }
 }
