--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,12 @@ a.active {
   align-items: center;
   overflow: hidden;
 }
+.card .card-image img {
+  transition: 0.35s;
+}
+.catalog .card a:hover img {
+  filter: saturate(2);
+}
 .category .card.horizontal .card-image img {
   border-radius: 50%;
   padding: 10px;
