--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@ a.active {
 .catalog .card .card-image {
   display: flex;
   align-items: center;
+  justify-content: center;
   overflow: hidden;
 }
 .card .card-image img {
@@ -173,5 +174,10 @@ footer ul {
   .desc {
     position: sticky;
     top: 20px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .catalog .card .card-image {
+    padding: 15px;
   }
 }
